--- a/Notes/Views/Home/Reg.cshtml
+++ b/Notes/Views/Home/Reg.cshtml
@@ -8,9 +8,9 @@
 
 <html>
 <head>
-    <link href="~/Content/Site.css" rel="stylesheet" type="text/css" media="all"/ >
+    <link href="~/Content/Site.css" rel="stylesheet" type="text/css" media="all" /> >
     <meta name="viewport" content="width=device-width" />
-    <title>主页</title>
+    <title>注册</title>
     <script type="text/javascript">
     function $(id)
     {
@@ -36,19 +36,20 @@
 </head>
 <body class="title" style="background-image:url(../../Image/Index/Background.jpg)">
     <span>
-        <h1>欢迎使用集成系统</h1>
+        <h1>注册</h1>
     </span>
     <span class="login">
-        @using (Html.BeginForm())
+        @using (Html.BeginForm("Reg", "Home"))
         {
             @Html.ValidationSummary()
-            <p>用户名：@Html.TextBoxFor(x=>x.username, 
-            new {@Value = "用户名/邮箱",@onfocus="aa(this,'username');", @onblur="bb(this,'username');"})<a id="name"></a></p>
+            <p>
+                用户名：@Html.TextBoxFor(x => x.username,
+            new { @Value = "用户名/邮箱", @onfocus = "aa(this,'username');", @onblur = "bb(this,'username');" })<a id="name"></a>
+            </p>
             <p>密码：&emsp;@Html.PasswordFor(x => x.passwd, new { @Value = "" })</p>
             <a href="">找回密码</a>
             <br />
-            <input id="login" type="submit" value="登陆">
-            <input id="reg" type="submit" value="注册">
+            <input id="reg" type="submit" value="提交">
         }
     </span>
 </body>
